--- a/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/curator-profile/curator-profile.component.html
@@ -10,8 +10,7 @@
             <img class="edit-icon" src="assets/icons/edit.png" />
         </div>
         <div class="action-buttons">
-            <button class="generate-report">Generate Report</button>
-            <button class="propose-exhibition">Do Something</button>
+            <button class="generate-report" (click) = "openReport()">Generate Report</button>
         </div>
     </div>
   
