--- a/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.html
@@ -10,7 +10,7 @@
             <img class="edit-icon" src="assets/icons/edit.png"/>
         </div>
         <div class="action-buttons">
-            <button class="generate-report">Generate Report</button>
+            <button class="generate-report" (click)="openReport()">Generate Report</button>
             <button class="propose-exhibition" (click)="openExhibitionProposalForm()">Propose Exhibition</button>
         </div>
     </div>
