--- a/museum-frontend/src/app/feature-modules/exhibitions/pdf-organizer-exhibitions-prompt/pdf-organizer-exhibitions-prompt.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/pdf-organizer-exhibitions-prompt/pdf-organizer-exhibitions-prompt.component.html
@@ -1,7 +1,7 @@
 <div class="modal-overlay" (click)="overviewClicked()"></div>
 <div class="modal-container">
   <div class="prompt" >
-    <h1>Report on exhibitions from the last month</h1>
+    <h1>PDF Report</h1>
     <div>
       <iframe [src]="pdfUrl" width="650px" height="750px"></iframe>
     </div>
