--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.html
@@ -104,13 +104,13 @@
             type="submit" 
             class="btn" 
             [@buttonState]="toursButtonState"
-            >Coming soon...
+            >Visit Tours
     </button>
     <button 
             type="submit" 
             class="btn" 
             [@buttonState]="eventsButtonState"
-            >Coming soon...
+            >Visit Events
     </button>
   </div>
 </div>
