--- a/museum-frontend/src/app/feature-modules/stakeholder/components/guest-profile/guest-profile.component.css
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/guest-profile/guest-profile.component.css
@@ -102,6 +102,7 @@
     max-height: 80vh;
     overflow-y: auto;
     padding-right: 10px;
+    min-height: calc(3 * 30vh + 2 * 20px);
 }
 
 .ticket-card {
