--- a/museum-frontend/src/app/feature-modules/exhibitions/create-exhibition/create-exhibition.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/create-exhibition/create-exhibition.component.html
@@ -16,9 +16,14 @@
                     <label for="theme">Theme</label>
                     <select id="theme" formControlName="theme" class="form-control">
                         <option value="" disabled selected>Select a theme</option>
-                        <option *ngFor="let theme of themes" [value]="theme">{{theme}}</option>
+                        <option *ngFor="let theme of themes" [value]="theme.key">
+                          {{ theme.value }}
+                        </option>
                     </select>
                 </div>
+                
+                
+                
 
                 <div class="form-group">
                     <label for="shortDescription">Short Description</label>
