--- a/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.css
+++ b/museum-frontend/src/app/feature-modules/stakeholder/components/organizer-profile/organizer-profile.component.css
@@ -247,6 +247,10 @@
     transform: translateX(-50%);
 }
 
+.find-out-more-button:hover {
+    background-color: #4a4a4a; /* Svetlija nijansa sive */
+}
+
 .exhibitions-grid {
     align-items: center; /* Vertikalno centrira kartice unutar grid-a */
     justify-content: center; /* Horizontalno centrira grid unutar containera */
