--- a/museum-frontend/src/app/infrastructure/auth/registration/registration.component.css
+++ b/museum-frontend/src/app/infrastructure/auth/registration/registration.component.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url('https://images.unsplash.com/photo-1566170821470-8c760077e748?q=80&w=2671&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat;
+  background: url('/assets/signUp-background.jpg') no-repeat;
   background-size: cover;
   background-position: center;
 }
