--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibition-card/exhibition-card.component.css
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibition-card/exhibition-card.component.css
@@ -65,6 +65,10 @@
     transform: translateX(-50%);
 }
 
+.find-out-more-button:hover {
+  background-color: #4a4a4a; /* Svetlija nijansa sive */
+}
+
 .rating {
   display: flex;
   margin-top: 10px;
